# assay

./: .gitignore  DESIGN.md  Dockerfile.analyzer  Dockerfile.proxy  LICENSE  Makefile  PHASE0.md  README.md  assay.example.yaml  docker-compose.yml  go.mod
.claude/: launch.json
.github/workflows/: ci.yml
analyzer/: README.md  pyproject.toml
analyzer/assay_analyzer/: __init__.py  __main__.py  digest.py  evidence.py  probe.py  reference.py  registry.py  report.py  runner.py
analyzer/assay_analyzer/checks/: __init__.py  base.py  cache_replay.py  exposure.py  model_identity.py  provenance.py  throughput.py  token_recount.py
analyzer/tests/: test_checks.py  test_digest.py  test_exposure.py  test_model_identity.py  test_probe_pipeline.py  test_provenance.py  test_registry.py
cmd/assay/: main.go  registry_cmd.go
internal/config/: config.go
internal/evidence/: digest.go  digest_test.go  record.go  verify.go  verify_test.go  writer.go
internal/proxy/: capture.go  classify.go  prober.go  proxy.go  proxy_test.go  redact.go  sse.go
internal/registry/: blocker_test.go  quorum.go  quorum_test.go  quorum_vectors_test.go  refbridge.go  regfile.go  revocation.go  sign.go  statement.go  statement_test.go  timegrammar.go  trustroot.go
schemas/: evidence.schema.json  verdict.schema.json
scripts/: dev-live.sh  e2e.sh  e2e_phase1.sh
testdata/: digest_vectors.json  mmd_real_openai.json  mock_models.py  mock_relay.py  quorum_vectors.json  registry_vectors.json
web/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  (+2 more)
(+63 files in other folders)
