[project]
name = "assay-analyzer"
version = "0.1.0a0"
description = "Analysis plane for assay (照妖镜): independent verification of LLM relay usage & model authenticity"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "tiktoken>=0.7",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
assay-analyzer = "assay_analyzer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assay_analyzer"]

[tool.ruff]
line-length = 100
